Bug 464507 - kwin_wayland forgets maximized state after aborting window resizing
Summary: kwin_wayland forgets maximized state after aborting window resizing
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.26.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-19 15:23 UTC by Patrick Silva
Modified: 2023-01-24 17:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-01-19 15:23:41 UTC
STEPS TO REPRODUCE
1. open Konsole and maximize it
2. right-click on the window decoration, hover over 'More actions' submenu and choose 'Resize'
3. resize Konsole by moving the mouse pointer
4. abort the resizing by pressing ESC key

OBSERVED RESULT
Konsole window occupies the whole screen but it is not maximized

EXPECTED RESULT
Maximized Konsole

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Graphics Platform: Wayland
Comment 1 Zamundaaa 2023-01-24 13:59:47 UTC
Git commit 9f2ed2083cbf4e22a9de41bf21273e3730a00ac4 by Xaver Hugl.
Committed on 24/01/2023 at 11:39.
Pushed by zamundaaa into branch 'master'.

window: restore special window states on moveresize cancel

M  +14   -9    src/window.cpp
M  +3    -4    src/window.h

https://invent.kde.org/plasma/kwin/commit/9f2ed2083cbf4e22a9de41bf21273e3730a00ac4
Comment 2 Zamundaaa 2023-01-24 17:48:33 UTC
Git commit 593e1266ceed45a1d829f161e2ec7422a03d6e30 by Xaver Hugl.
Committed on 24/01/2023 at 14:40.
Pushed by zamundaaa into branch 'Plasma/5.27'.

window: restore special window states on moveresize cancel
(cherry picked from commit 9f2ed2083cbf4e22a9de41bf21273e3730a00ac4)

M  +14   -9    src/window.cpp
M  +3    -4    src/window.h

https://invent.kde.org/plasma/kwin/commit/593e1266ceed45a1d829f161e2ec7422a03d6e30