window: restore special window states on moveresize cancel

BUG: 464507
(cherry picked from commit 9f2ed2083cbf4e22a9de41bf21273e3730a00ac4)